# agent-learn

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md
docs/chapters/langchain/: 03-quickstart.md  04-philosophy.md  05-agents.md  06-models.md  07-messages.md  08-tools.md  09-short-term-memory.md  10-event-streaming.md  11-streaming.md  12-structured-output.md  13-middleware-overview.md  14-middleware-built-in.md
skills/agent-learning/: SKILL.md
skills/agent-learning/agents/: openai.yaml
skills/agent-learning/references/: chapter-template.md  project-architecture.md
skills/chinese-agent-learning/: SKILL.md
skills/chinese-agent-learning/agents/: openai.yaml
skills/chinese-agent-learning/references/: tool-docstring-template.md
src/agent_learn/: __init__.py
src/agent_learn/frameworks/: __init__.py
src/agent_learn/frameworks/langchain/: __init__.py  chat_model_factory.py  model_policy.py
src/agent_learn/frameworks/langchain/05-agents/: context_inventory_agent.py  minimal_inventory_agent.py
src/agent_learn/frameworks/langchain/06-models/: model_invocation.py  structured_output.py
src/agent_learn/frameworks/langchain/07-messages/: live_model_messages.py  message_basics.py  tool_message_flow.py
src/agent_learn/shared/: __init__.py  environment.py
tests/: test_environment.py  test_event_streaming.py  test_message_flow.py  test_middleware_overview.py  test_model_policy.py  test_prebuilt_middleware.py  test_short_term_memory.py  test_streaming_modes.py  test_structured_output.py  test_text_store.py  test_tool_contract.py
(+35 files in other folders)
