[project]
name = "agent-learn"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
deepagents = ["deepagents>=0.1.0"]
dev = ["pytest>=8.0.0", "ruff>=0.12.0"]
openai = ["langchain-openai>=1.0.0"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
